k3s/apps/bitwarden/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
spec:
  type: ClusterIP
  selector:
    app: bitwarden
  ports:
    - name: http
      port: 8000
      targetPort: http
    - name: websocket
      port: 3012
      targetPort: websocket
