k3s/apps/bitwarden/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitwarden
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
spec:
  ingressClassName: public
  rules:
    - host: warden.lama-corp.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bitwarden
                port:
                  name: http
          - path: /notifications/hub
            pathType: Prefix
            backend:
              service:
                name: bitwarden
                port:
                  name: websocket
  tls:
    - hosts:
        - warden.lama-corp.space
      secretName: bitwarden-tls
